--- a/style.css
+++ b/style.css
@@ -1,18 +1,24 @@
 body {
   padding-left: 11em;
-  font-family: Georgia, "Times New Roman",
-        Times, serif;
+  font-family: Helvetica, serif;
   color: black;
-  background-color: #d8da3d }
+  font-size: 20px;
+  background-color: #d8da3d 
+}
+
 h1 {
-  font-family: Helvetica, Geneva, Arial,
-        SunSans-Regular, sans-serif }
+  font-family: Helvetica, sans-serif 
+}
 
 
 p{
   color:black;
   font-size: 20px;
 }
+
+
+
+/*---Table Section---*/
 
 table{
   width: 50%;
@@ -23,19 +29,12 @@ table{
 }
 
   
-
 tbody > tr:nth-child(even) {background: lightgreen}
 tbody > tr:nth-child(odd) {background: lightblue}
-
-
-/*thead tr th{background: white}*/
-
-
 
 thead th{
   font-weight: bold;
 }
-
 
 th,td{
   border-bottom: 2px solid black;
@@ -43,13 +42,9 @@ th,td{
   text-align: left;
 }
 
-
-
-
 tbody tr th{
   font-style: italic;
 }
-
 
 td:nth-child(2){
   color: red;
@@ -59,16 +54,56 @@ td:nth-child(4){
   color: blue;
 }
 
-
 tfoot tr td{
     color: black;
     background-color: white;
 }
 
-
 dt:hover+dd{ /* th:hover also if you wish */
   background: purple;
 }
 
+
+/*--Box Section*/
+
+
+.outer_content {
+  display:block;
+  margin:20px;
+  padding: 20px;
+  background: pink;
+  height: 60px;
+  width: 75%;
+  border: solid black 1px;
+}
+
+.inner_content {
+  background: blue;
+  width: 75%;
+}
+
+div div{
+  display: block ;
+  text-align: center ;  
+  border: solid black 1px;
+  margin-left: 12.5%;
+  margin-right: 12.5%;
+  height: 60px;
+}
+
+
+form{ 
+  margin: 25px;
+  border: solid 2px;
+  padding: 20px;
+  padding-left: 10px;
+  padding-bottom: 25px
+}
+
+/*--- Paragraph Section*---*/
+div:last-child{
+  display:block;  
+  float: left;
+}
 
 
